--- a/configs/monodetr.yaml
+++ b/configs/monodetr.yaml
@@ -3,10 +3,10 @@ random_seed: 444
 
 dataset:
   type: &dataset_type 'KITTI'
-  root_dir: 'data/KITTIDataset'
+  root_dir: '/local_datasets/monodetr/KITTIDataset/'
   train_split: 'train'
   test_split: 'val'
-  batch_size: 16
+  batch_size: 8
   use_3d_center: True
   class_merging: False
   use_dontcare: False
